--- a/src/main/resources/com/example/demo1/game.fxml
+++ b/src/main/resources/com/example/demo1/game.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="532.0" prefWidth="871.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo1.tabs.Game">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="532.0" prefWidth="871.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo1.tabs.Game">
    <children>
       <ImageView fitHeight="416.0" fitWidth="880.0" layoutY="-5.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -187,9 +187,9 @@
                   <Font size="27.0" />
                </font>
             </Text>
-            <TextArea fx:id="meaning" editable="false" layoutX="14.0" layoutY="89.0" prefHeight="250.0" prefWidth="406.0" styleClass="text-area" stylesheets="@../../../style.css">
+            <TextArea fx:id="meaning" editable="false" layoutX="14.0" layoutY="89.0" prefHeight="250.0" prefWidth="406.0" styleClass="text-area" stylesheets="@../../../style.css" wrapText="true">
                <font>
-                  <Font name="Book Antiqua" size="27.0" />
+                  <Font name="Book Antiqua" size="18.0" />
                </font>
             </TextArea>
             <Label fx:id="yay" alignment="BOTTOM_CENTER" layoutX="29.0" layoutY="17.0" prefHeight="58.0" prefWidth="406.0" textFill="#fd0000">
