--- a/src/main/resources/com/example/demo1/game3.fxml
+++ b/src/main/resources/com/example/demo1/game3.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="532.0" prefWidth="871.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo1.tabs.Game3">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="532.0" prefWidth="871.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo1.tabs.Game3">
     <children>
         <ImageView fitHeight="416.0" fitWidth="880.0" layoutY="-5.0" pickOnBounds="true">
             <image>
@@ -44,7 +44,7 @@
                         </ImageView>
                </children>
             </Pane>
-                <JFXButton buttonType="RAISED" layoutX="14.0" layoutY="347.0" onAction="#Replay" prefHeight="44.0" prefWidth="117.0" styleClass="replay_button" stylesheets="@../../../style.css" text="Replay" textFill="#14aa55">
+                <JFXButton buttonType="RAISED" layoutX="14.0" layoutY="329.0" onAction="#Replay" prefHeight="44.0" prefWidth="117.0" styleClass="replay_button" stylesheets="@../../../style.css" text="Replay" textFill="#14aa55">
                     <graphic>
                         <ImageView fitHeight="33.0" fitWidth="75.0" pickOnBounds="true" preserveRatio="true">
                             <image>
@@ -56,7 +56,7 @@
                         <Font name="Book Antiqua" size="16.0" />
                     </font>
                 </JFXButton>
-                <FlowPane fx:id="butts" alignment="TOP_CENTER" hgap="8.0" layoutX="11.0" layoutY="423.0" prefHeight="85.0" prefWidth="849.0" vgap="8.0">
+                <FlowPane fx:id="butts" alignment="TOP_CENTER" hgap="8.0" layoutX="15.0" layoutY="446.0" prefHeight="85.0" prefWidth="849.0" vgap="8.0">
                     <children>
                         <Button focusTraversable="false" minWidth="33.0" mnemonicParsing="false" onAction="#clicked" prefWidth="20.0" stylesheets="@../../../style.css" text="A">
                             <font>
@@ -190,7 +190,7 @@
                         </Button>
                     </children>
                 </FlowPane>
-                <Text fx:id="text" fill="RED" layoutX="306.0" layoutY="391.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" textAlignment="CENTER" wrappingWidth="282.8033256530762">
+                <Text fx:id="text" layoutX="309.0" layoutY="411.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" textAlignment="CENTER" wrappingWidth="282.8033256530762">
                     <font>
                         <Font size="27.0" />
                     </font>
@@ -236,6 +236,11 @@
                         </ImageView>
                     </children>
                 </Pane>
+            <Label fx:id="res" alignment="TOP_CENTER" layoutX="151.0" layoutY="346.0" prefHeight="36.0" prefWidth="502.0" textAlignment="CENTER" textFill="#6d05ff" underline="true">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Label>
             </children>
         </AnchorPane>
         <Button layoutX="2.0" layoutY="5.0" mnemonicParsing="false" onAction="#Back" styleClass="pink_butt" stylesheets="@../../../style.css">
